# deepfix

./: .gitignore  Dev-Plan.md  README.md  cursor-wrapper.md  deepchecks_artifacts.yaml  deepchecks_config.yaml  main.py  pyproject.toml
configs/: default_config.yaml
configs/templates/: comprehensive.yaml  data_quality.yaml  performance.yaml
deepchecks_results/: food101.json
dev_plan/: advisor.md
examples/: README.md  advisor_usage.py  build_prompts.py  cursor_example.py  dev.ipynb  examples.ipynb  integrate_existing_runs.py  run_artifact_manager.py  run_suite_of_checks.py  run_training.py  vision_dataloader.ipynb
examples/mlflow_downloads/07c04cc42fd9461e98f7eb0bf42444fb/deepchecks/: artifacts.yaml
examples/mlflow_downloads/07c04cc42fd9461e98f7eb0bf42444fb/training_artifacts/: metrics.csv  params.yaml
scripts/: launch_mlflow.sh
src/deepsight/: __init__.py
src/deepsight/core/: __init__.py  config.py  researcher.py
src/deepsight/core/advisor/: __init__.py  config.py  errors.py  orchestrator.py  result.py
src/deepsight/core/artifacts/: __init__.py  datamodel.py  manager.py  repository.py  services.py
src/deepsight/core/data/: __init__.py  loader.py  utils.py
src/deepsight/core/pipelines/: artifacts.py  base.py  checks.py  data_ingestion.py  query.py  (+5 more)
src/deepsight/integrations/: __init__.py  deepchecks.py  deepchecks_runner.py  dvc.py  lightning.py  mlflow.py  mlflow_client.py
src/deepsight/utils/: __init__.py  config.py  exceptions.py  feature_extractor.py  logging.py  validators.py
src/deepsight/zoo/: __init__.py  foodwaste.py  timm_models.py
(+45 files in other folders)
