[project]
name = "deepsight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepchecks[vision]>=0.19.1",
    "dvc>=3.62.0",
    "mlflow>=3.3.2",
    "pydantic>=2.11.7",
    "torch==2.8.0",
    "torchvision>=0.21.0",
    "typer>=0.16.1",
]
